xmloff/qa/unit/text.cxx
@@ -508,11 +508,11 @@ CPPUNIT_TEST_FIXTURE(XmloffStyleTest, testRelativeWidth)
 
     xmlDocUniquePtr pXmlDoc = parseExport(u"content.xml"_ustr);
     // Without the accompanying fix in place, this failed with:
-    // - Expected: 3.1492in (8cm)
+    // - Expected: 3.15in (8cm)
     // - Actual  : 0.0161in (0.04 cm)
     // i.e. the fallback width value wasn't the expected half of the body frame width, but a smaller
     // value.
-    assertXPath(pXmlDoc, "//draw:frame"_ostr, "width"_ostr, u"3.1492in"_ustr);
+    assertXPath(pXmlDoc, "//draw:frame"_ostr, "width"_ostr, u"3.15in"_ustr);
 }
 
 CPPUNIT_TEST_FIXTURE(XmloffStyleTest, testScaleWidthAndHeight)
